pluma_parser/tests/snapshots/parse_success__string_escape_backslash.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"part 1\\\\part 2\""
---

=== Source ===
"part 1\\part 2"

=== Comments ===
{}

=== AST ===
Module(1, 15) [
    TopLevelStatement(1, 15) Expr(
        ExprNode {
            pos: (
                1,
                15,
            ),
            kind: Literal {
                literal: Literal(1, 15) Str("part 1\\part 2"),
            },
            typ: Unknown,
        },
    ),
]

