pluma_parser/tests/snapshots/parse_success__string_escape_return.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"line 1\\rline 2\""
---

=== Source ===
"line 1\rline 2"

=== Comments ===
{}

=== AST ===
Module(1, 15) [
    TopLevelStatementNode {
        pos: (
            1,
            15,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    1,
                    15,
                ),
                kind: Literal {
                    literal: LiteralNode {
                        pos: (
                            1,
                            15,
                        ),
                        kind: Str(
                            "line 1\rline 2",
                        ),
                    },
                },
                typ: Unknown,
            },
        ),
    },
]

