pluma_parser/tests/snapshots/parse_success__string_escape_tab.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"hello\\tworld\""
---

=== Source ===
"hello\tworld"

=== Comments ===
{}

=== AST ===
Module(1, 13) [
    TopLevelStatement(1, 13) Expr(
        ExprNode {
            pos: (
                1,
                13,
            ),
            kind: Literal {
                literal: Literal(1, 13) Str("hello\tworld"),
            },
            typ: Unknown,
        },
    ),
]

