pluma_parser/tests/snapshots/parse_success__tuple_empty.snap
---
source: pluma_parser/tests/parse_success.rs
expression: ()
---

=== Source ===
()

=== Comments ===
{}

=== AST ===
Module(0, 2) [
    TopLevelStatement(0, 2) Expr(
        ExprNode {
            pos: (
                0,
                2,
            ),
            kind: EmptyTuple,
            typ: Unknown,
        },
    ),
]

