pluma_parser/tests/snapshots/parse_success__tuple_empty_across_lines.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "(\n\n)"
---

=== Source ===
(

)

=== Comments ===
{}

=== AST ===
Module(0, 4) [
    TopLevelStatementNode {
        pos: (
            0,
            4,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    0,
                    4,
                ),
                kind: EmptyTuple,
                typ: Unknown,
            },
        ),
    },
]

