pluma_parser/tests/snapshots/parse_success__tuple_two_elements.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "(1, \"wow\")"
---

=== Source ===
(1, "wow")

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        10,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                10,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        10,
                    ),
                    kind: Tuple(
                        [
                            ExprNode {
                                pos: (
                                    1,
                                    2,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            1,
                                            2,
                                        ),
                                        kind: IntDecimal(
                                            1,
                                        ),
                                    },
                                ),
                                typ: Unknown,
                            },
                            ExprNode {
                                pos: (
                                    5,
                                    8,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            5,
                                            8,
                                        ),
                                        kind: Str(
                                            "wow",
                                        ),
                                    },
                                ),
                                typ: Unknown,
                            },
                        ],
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

