pluma_parser/tests/snapshots/parse_success__type_alias_across_lines.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "alias Alpha\n  Beta"
---

=== Source ===
alias Alpha
  Beta

=== Comments ===
{}

=== AST ===
Module(0, 18) [
    TopLevelStatementNode {
        pos: (
            0,
            18,
        ),
        kind: TypeDef(
            TypeDefNode {
                pos: (
                    0,
                    18,
                ),
                visibility: Public,
                kind: Alias {
                    of: TypeExprNode {
                        pos: (
                            14,
                            18,
                        ),
                        kind: Single(
                            TypeIdentifierNode {
                                pos: (
                                    14,
                                    18,
                                ),
                                name: "Beta",
                                generics: [],
                                constraints: None,
                            },
                        ),
                        typ: Unknown,
                    },
                },
                name: TypeIdentifierNode {
                    pos: (
                        6,
                        11,
                    ),
                    name: "Alpha",
                    generics: [],
                    constraints: None,
                },
                generic_type_constraints: [],
            },
        ),
    },
]

