pluma_parser/tests/snapshots/parse_success__type_alias_same_line.snap
---
source: pluma_parser/tests/parse_success.rs
expression: alias Alpha Beta
---

=== Source ===
alias Alpha Beta

=== Comments ===
{}

=== AST ===
Module(0, 16) [
    TopLevelStatement(0, 16) TypeDef(
        TypeDefNode {
            pos: (
                0,
                16,
            ),
            visibility: Public,
            kind: Alias {
                of: TypeExprNode {
                    pos: (
                        12,
                        16,
                    ),
                    kind: Single(
                        TypeIdentifierNode {
                            pos: (
                                12,
                                16,
                            ),
                            name: "Beta",
                            generics: [],
                            constraints: None,
                        },
                    ),
                    typ: Unknown,
                },
            },
            name: TypeIdentifierNode {
                pos: (
                    6,
                    11,
                ),
                name: "Alpha",
                generics: [],
                constraints: None,
            },
            generic_type_constraints: [],
        },
    ),
]

